--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "dependencies": {
     "express": "^4.15.2",
     "socket.io": "^2.0.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1"
   }
 }
